# subseq_util

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: oidc.rs  tls.rs  tls_server.rs
migrations/2024-01-05-051507_auth/: down.sql  up.sql
migrations/2024-01-17-002637_account_type/: down.sql  up.sql
migrations/2024-01-22-185420_portraits/: down.sql  up.sql
migrations/2024-07-04-003456_drop_unique_email_constraint/: down.sql  up.sql
migrations/2024-07-04-030732_pending_email_verifications/: down.sql  up.sql
migrations/2024-07-07-024852_drop_unique_username/: down.sql  up.sql
src/: auth.rs  database.rs  email.rs  lib.rs  oidc.rs  rate_limit.rs  router.rs  rustls.rs  schema.rs  server.rs  tracing.rs
src/api/: email.rs  mod.rs  sessions.rs  users.rs  warp_email.rs  warp_sessions.rs
src/api/axum/: email.rs  mod.rs  sessions.rs
src/api/warp/: email.rs  mod.rs  sessions.rs
src/async_api/: email.rs  mod.rs
src/async_tables/: email.rs  mod.rs  users.rs
src/tables/: email.rs  mod.rs  users.rs
