[package]
name = "subseq_util"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
anymap = "0.12.1"
chrono = { version = "0.4.31", features = ["serde"] }
console-subscriber = {version = "0.2.0", optional=true}
cookie = "0.18.0"
diesel = { version = "2.1.4", features = ["chrono", "r2d2", "postgres", "postgres_backend", "uuid", "serde_json"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
function_name = "0.3.0"
lazy_static = "1.4.0"
openidconnect = "3.4.0"
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"] }
serde = "1.0.194"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["sync", "rt", "time"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features=["env-filter"]}
url = "2.4.0"
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
warp = { version = "0.3.6", features = ["tls"] }
warp-sessions = "1.0.19"

[dev-dependencies]
email_address = "0.2.4"

[features]
default = []
console = ["console-subscriber"]
