[package]
name = "subseq_util"
version = "0.5.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros", "multipart", "http2"], optional = true }
anyhow = "1.0.79"
anymap = "0.12.1"
base64 = "0.13.0"
bb8 = { version = "0.8.5" }
chrono = { version = "0.4.31", features = ["serde"] }
console-subscriber = {version = "0.2.0", optional = true}
cookie = "0.18.0"
diesel = { version = "2.1.6", features = ["chrono", "r2d2", "postgres", "postgres_backend", "uuid", "serde_json"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
email_address = "0.2.4"
function_name = "0.3.0"
handlebars = { version = "5.1.2", features = ["dir_source"] }
hyper = { version = "0.14", features = ["http2"] }
lazy_static = "1.4.0"
openidconnect = "3.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"] }
serde = "1.0.194"
serde_json = "1.0.111"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["sync", "rt", "time"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features=["env-filter"]}
url = "2.4.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
warp = { version = "0.3.6", features = ["tls"], optional = true }
warp-sessions = { version = "1.0.19", optional = true }
futures-util = "0.3.30"
rustls = "0.23.11"
rustls-native-certs = "0.7.1"
tokio-postgres-rustls = "0.12.0"
tokio-postgres = "0.7.10"

[features]
default = []
abort-on-connection-error = []
console = ["console-subscriber"]
warp = ["dep:warp", "warp-sessions"]
axum = ["dep:axum"]
